change all blog style

--- a/app/code/Magefan/Blog/view/frontend/templates/sidebar/popular.phtml
+++ b/app/code/Magefan/Blog/view/frontend/templates/sidebar/popular.phtml
@@ -16,17 +16,13 @@
 ?>
 
 <style type="text/css">
-    .block-list-posts{
+    .blog-page .block-list-posts{
         position: static;
         width: 285px;
         background: #FFFFFF;
     }
-    .block-title{
 
-
-    }
-
-    .block-content{
+    .blog-page .block-content{
         border:none !important;
     }
 
