--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_blog.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_blog.less
@@ -5,12 +5,6 @@
 	.post-list{
 		padding:0;
 		margin:0;
-		.post-header .post-title{
-
-			a{
-
-			}
-		}
 	}
 	.post-list .post-holder .post-heade{
 		padding-top:0;
@@ -49,8 +43,8 @@
         position: static;
         width: 875px;
         height: 300px;
-        left: 0px;
-        top: 0px;
+        left: 0;
+        top: 0;
 
         background: #FFFFFF;
         border-radius: 4px;
@@ -91,7 +85,7 @@
             flex: none;
             order: 1;
             flex-grow: 1;
-            margin: 0px 0px;
+            margin: 0;
 			.post-title{
 
 				a{
@@ -99,17 +93,11 @@
 					.lib-css(font, @f_h3);
 				}
 			}
-			.post-description{
 
-			}
-			.post-read-more{
-
-
-			}
 		}
 	}
 }
-//
+
 .post-view{
 	.post-holder{
 		.lib-css(background-color, @main_block_background);
@@ -142,15 +130,6 @@
 .toolbar-blog-posts{
     box-shadow: none !important;
     -webkit-box-shadow: none !important;
-	/*margin-top:60px;
-	padding-top:60px;
-	.lib-css(border, 0);*/
-}
-
-
-
-.post-info .item{
-
 }
 
 .verticla-line{
