--- a/app/code/Codazon/MegaMenu/view/frontend/web/css/source/_module.less
+++ b/app/code/Codazon/MegaMenu/view/frontend/web/css/source/_module.less
@@ -662,6 +662,9 @@ body{overflow-x: hidden;}
                     padding: 0 0 16px;
                     font-size: 14px;
                     line-height: 1.25;
+                    &:last-child {
+                        padding: 0;
+                    }
                 }
             }
             .item.parent {
