--- a/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_grid-col.less
+++ b/app/design/frontend/Codazon/fastest/fashion/web/css/source/layout/_grid-col.less
@@ -1448,16 +1448,17 @@
   }
 
     .col-logo {
-        width: 160px;
+        width: 192px;
+        height: 48px;
         margin-left: 10px;
-        margin-right: 34px;
+        margin-right: 88px;
     }
     .col-search {
-        width: 755px;
+        width: 645px;
     }
     .col-cart {
-        width: 197px;
-        margin-left: 36px;
+        width: 195px;
+        margin-left: 60px;
     }
     .col-warrany {
         width: 292px;
