--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_homestore.less
@@ -114,9 +114,10 @@
 }
 @media (min-width: 768px){
 	.header-wrapper-content > .header.content {
-		padding: 24px 10px 24px;
+		padding: 20px 10px 20px;
         .row {
             display: flex;
+            align-items: center;
         }
 	}
 	.page-header .minicart-wrapper .action.showcart {
