--- a/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_menu.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/web/css/source/layout/_menu.less
@@ -610,12 +610,12 @@
             }
             li.item.open{
                 > a.menu-link {
-                    font-weight: bold;
+                    font-family: 'roboto-medium' !important;
                 }
             }
             li.item.level0.open{
                 > a.menu-link {
-                    font-weight: bold !important;
+                    font-weight: normal !important;
                     background: #F4FBFF !important;
                 }
             }
