--- a/app/design/frontend/Codazon/fastest/fashion/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/fashion/Magento_LayeredNavigation/web/css/source/_module.less
@@ -245,15 +245,26 @@
 							display:inline-block;
 							.input-text{
 								width:50px;
+                                border-radius: 4px;
 							}
 						}
                         .delimiter {
                             margin:0 0 0 4px;
                         }
+                        .currency {
+                            padding-left: 5px;
+                        }
 					}
 					.action{
 						display:inline-block;
                         padding-left: 10px;
+                        .submit {
+                            height: 40px;
+                            margin-bottom: 0;
+                            border-radius: 4px;
+                            border: none;
+                            padding: 0 16px;
+                        }
 					}
 				}
             }
