--- a/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_header.less
+++ b/app/design/frontend/Codazon/fastest/hightech/web/css/source/layout/_header.less
@@ -86,7 +86,7 @@
                     -moz-osx-font-smoothing: grayscale;
                     content: "\e914";
                     font-size: 24px;
-					margin-right:10px;
+					margin-right: 4px;
                     position: relative;
                     top: 4px;
 				}
@@ -103,7 +103,7 @@
                 font-size: 16px;
                 line-height: 19px;
                 color: #fff;
-                padding-top: 3px !important;
+                padding-top: 4px !important;
             }
             .switcher {
                 margin-right: 0 !important;
@@ -119,7 +119,7 @@
                 font-size: 16px;
                 line-height: 19px;
                 color: #fff;
-                padding-top: 3px !important;
+                padding-top: 4px !important;
                 &:before {
                     display: inline-block;
                     font-family: icomoon;
@@ -130,7 +130,7 @@
                     -moz-osx-font-smoothing: grayscale;
                     content: "\e914";
                     font-size: 24px;
-                    margin-right: 10px;
+                    margin-right: 4px;
                     position: relative;
                     top: 4px;
                 }
@@ -148,7 +148,7 @@
 
 		//Cart
 		.minicart-wrapper{
-			margin-left:28px;
+			margin-left:40px;
 			.rtl-layout &{
 				margin-left:0;
 				margin-right:@indent__s;
@@ -233,6 +233,10 @@
 		}
 
 	}
+
+    .customer-account-index .page-header .minicart-wrapper {
+        margin-left: 33px;
+    }
 }
 //Desktop
 .media-width(@extremum, @break) when (@extremum = 'min') and (@break = @screen__m) {
@@ -337,7 +341,7 @@
                 .search {
                     .control {
                         border-radius: 4px;
-                        width: 700px;
+                        width: 589px;
                         .input-text {
                             border-radius: 4px 0 0 4px;
                             color: #333333;
