--- a/app/design/frontend/Codazon/fastest/hightech2/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech2/Magento_LayeredNavigation/web/css/source/_module.less
@@ -243,12 +243,23 @@
 							display:inline-block;
 							.input-text{
 								width:50px;
+                                border-radius: 4px;
 							}
 						}
+                        .currency {
+                            padding-left: 5px;
+                        }
 					}
 					.action{
 						display:inline-block;
                         padding-left: 10px;
+                        .submit {
+                            height: 34px;
+                            margin-bottom: 0;
+                            border-radius: 4px;
+                            border: none;
+                            padding: 0 16px;
+                        }
 					}
 				}
             }
