--- a/app/design/frontend/Codazon/fastest/hightech3/Magento_LayeredNavigation/web/css/source/_module.less
+++ b/app/design/frontend/Codazon/fastest/hightech3/Magento_LayeredNavigation/web/css/source/_module.less
@@ -245,12 +245,23 @@
 							display:inline-block;
 							.input-text{
 								width:50px;
+                                border-radius: 4px;
 							}
 						}
+                        .currency {
+                            padding-left: 5px;
+                        }
 					}
 					.action{
 						display:inline-block;
                         padding-left: 10px;
+                        .submit {
+                            height: 40px;
+                            margin-bottom: 0;
+                            border-radius: 4px;
+                            border: none;
+                            padding: 0 16px;
+                        }
 					}
 				}
             }
@@ -258,6 +269,15 @@
     }
     .filter-options-item.manufacturer {
         display: none;
+    }
+}
+
+@media only screen and (max-width: 768px){
+    .filter-options-content .price-slider-container {
+        .action{
+            padding-left: 0;
+            padding-top: 10px;
+        }
     }
 }
 
